<resources>
    <string name="app_name">Cricizz</string>
    <string name="title_activity_main_menu">Score Card</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cricizz App</string>
    <string name="nav_header_subtitle">hannanshahid0@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_newmatch">New Match</string>
    <string name="menu_feedback">Matches History</string>
    <string name="menu_rateus">Rate us</string>

    <string name="menu_share">Share</string>
    <string name="menu_aboutus">About us</string>
    <string name="title_activity_matchhistory">Matches History</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-4777915220636073/4206388760</string>
    <string name="app_id">ca-app-pub-4777915220636073~8205537049</string>
</resources>
