<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_newmatch"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_newmatch"/>
        <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_feedback"/>
        <item
                android:id="@+id/nav_rateus"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_rateus" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_share"/>

        </menu>
    </item>
    <item android:title="About ">
        <menu>
            <item
                    android:id="@+id/nav_aboutus"
                    android:icon="@mipmap/ic_launcher_cricapp_round"
                    android:title="@string/menu_aboutus"/>

        </menu>
    </item>
</menu>
